--- a/aws-lambda/index.html
+++ b/aws-lambda/index.html
@@ -96,11 +96,16 @@
 
     function run() {
         var dataURL = canvas.toDataURL();
+        ctx.clearRect(0, 0, w, h);
+        ctx.fillStyle = "white";
+        ctx.fillRect(0, 0, w, h);
         $.post(
             "/default/doodle",
+            // "/doodle",
             { img: dataURL },
             function (err, req, resp) {
                 window.location.href = "/default/doodle";
+                // window.location.href = "/doodle";
             }
         );
     }
@@ -142,14 +147,13 @@
         width: 100%;
         height: 100%;
         overflow-y: hidden;
-        overflow-x: hidden; 
+        overflow-x: hidden;
         touch-action: none;
         -webkit-overflow-scrolling: none;
         overflow: hidden;
         overscroll-behavior: none;
-        scroll: "no";
     }
-    
+
     #inputCanvas {
         border: 2px solid rgb(102, 153, 255);
     }
@@ -194,7 +198,7 @@
     }
 </style>
 
-<body onload="init()">
+<body onload="init()" scroll="no">
     <div id="content" class="container main-container">
         <div class="text-center">
             <h1>Doodle</h1>
