--- a/aws-lambda/index.html
+++ b/aws-lambda/index.html
@@ -101,11 +101,9 @@
         ctx.fillRect(0, 0, w, h);
         $.post(
             "/default/doodle",
-            // "/doodle",
             { img: dataURL },
             function (err, req, resp) {
                 window.location.href = "/default/doodle";
-                // window.location.href = "/doodle";
             }
         );
     }
@@ -146,14 +144,10 @@
     body {
         width: 100%;
         height: 100%;
-        overflow-y: hidden;
-        overflow-x: hidden;
         touch-action: none;
-        -webkit-overflow-scrolling: none;
-        overflow: hidden;
-        overscroll-behavior: none;
+        scroll: "no";
     }
-
+    
     #inputCanvas {
         border: 2px solid rgb(102, 153, 255);
     }
@@ -198,7 +192,7 @@
     }
 </style>
 
-<body onload="init()" scroll="no">
+<body onload="init()">
     <div id="content" class="container main-container">
         <div class="text-center">
             <h1>Doodle</h1>
@@ -219,13 +213,13 @@
             <input type="button" class="btn btn-primary" value="clear" id="clr" onclick="erase()">
         </div>
         <div class="row text-center">
-            <h4>Result : {{ result }}</h4>
+            <h3>Result : {{ result }}</h3>
             {% for k, v in scores.items() %}
             <h4>{{ k }} : {{ v }}</h4>
             {% endfor %}
         </div>
         <div class="text-center">
-            <h5>Copyright &copy; Robert 2022</h5>
+            <h5>Copyright &copy; copy right &#128077</h5>
         </div>
     </div>
 </body>
